code refactoring - now crd fields are generated also from all path parameters
