# internal/controllers/compositiondefinition/generator/oas.go
@@ -23,16 +23,21 @@ type OASSchemaGenerator struct {
 	secByteSchema    map[string][]byte
 }
 
-func GenerateByteSchemas(doc *libopenapi.DocumentModel[v3.Document], resource definitionv1alpha1.Resource, identifier string) error {
+// GenerateByteSchemas generates the byte schemas for the spec, status and auth schemas. Returns a fatal error and a list of generic errors.
+func GenerateByteSchemas(doc *libopenapi.DocumentModel[v3.Document], resource definitionv1alpha1.Resource, identifier string) (fatalError error, errors []error) {
 	secByteSchema := make(map[string][]byte)
 	var err error
 	for secSchemaPair := doc.Model.Components.SecuritySchemes.First(); secSchemaPair != nil; secSchemaPair = secSchemaPair.Next() {
-		if !generation.IsValidAuthSchema(secSchemaPair.Value()) {
+		authSchemaName, err := generation.GenerateAuthSchemaName(secSchemaPair.Value())
+		if err != nil {
+			errors = append(errors, err)
 			continue
 		}
-		secByteSchema[secSchemaPair.Key()], err = generation.GenerateAuthSchemaFromSecuritySchema(secSchemaPair.Value())
+
+		secByteSchema[authSchemaName], err = generation.GenerateAuthSchemaFromSecuritySchema(secSchemaPair.Value())
 		if err != nil {
-			return nil
+			errors = append(errors, err)
+			continue
 		}
 	}
 
@@ -41,32 +46,66 @@ func GenerateByteSchemas(doc *libopenapi.DocumentModel[v3.Document], resource de
 		if strings.EqualFold(verb.Action, "create") && strings.EqualFold(verb.Method, "post") {
 			path := doc.Model.Paths.PathItems.Value(verb.Path)
 			if path == nil {
-				return fmt.Errorf("path %s not found", verb.Path)
+				return fmt.Errorf("path %s not found", verb.Path), errors
 			}
 			bodySchema := base.CreateSchemaProxy(&base.Schema{Properties: orderedmap.New[string, *base.SchemaProxy]()})
 			if path.Post.RequestBody != nil {
 				bodySchema = path.Post.RequestBody.Content.Value("application/json").Schema
 			}
 			if bodySchema == nil {
-				return fmt.Errorf("body schema not found for %s", verb.Path)
+				return fmt.Errorf("body schema not found for %s", verb.Path), errors
 			}
 
 			// Add auth schema references to the spec schema
+			bodySchema.Schema().Properties.Set("authenticationRefs", base.CreateSchemaProxy(&base.Schema{
+				Type:        []string{"object"},
+				Description: "AuthenticationRefs represent the reference to a CR containing the authentication information. One authentication method must be set."}))
+			bodySchema.Schema().Required = append(bodySchema.Schema().Required, "authenticationRefs")
 			for key, _ := range secByteSchema {
-				bodySchema.Schema().Properties.Set(fmt.Sprintf("%sAuthRef", text.CapitaliseFirstLetter(key)),
+				authSchemaProxy := bodySchema.Schema().Properties.Value("authenticationRefs")
+				if authSchemaProxy == nil {
+					return fmt.Errorf("authenticationRefs schema not found for %s", verb.Path), errors
+				}
+
+				// Ensure authSchemaProxy.Schema().Properties is initialized
+				if authSchemaProxy.Schema().Properties == nil {
+					authSchemaProxy.Schema().Properties = orderedmap.New[string, *base.SchemaProxy]()
+				}
+				authSchemaProxy.Schema().Properties.Set(fmt.Sprintf("%sRef", text.FirstToLower(key)),
 					base.CreateSchemaProxy(&base.Schema{Type: []string{"string"}}))
 			}
 
 			schema, err := bodySchema.BuildSchema()
 			if err != nil {
-				return fmt.Errorf("building schema for %s: %w", verb.Path, err)
+				return fmt.Errorf("building schema for %s: %w", verb.Path, err), errors
 			}
-			for _, param := range path.Post.Parameters {
-				schema.Properties.Set(param.Name, param.Schema)
+
+			// for secSchemaPair := doc.Model.Components.SecuritySchemes.First(); secSchemaPair != nil; secSchemaPair = secSchemaPair.Next() {
+			for _, verb := range resource.VerbsDescription {
+				path := doc.Model.Paths.PathItems.Value(verb.Path)
+				ops := path.GetOperations()
+				if ops == nil {
+					continue
+				}
+				for op := ops.First(); op != nil; op = op.Next() {
+					for _, param := range op.Value().Parameters {
+						if _, ok := schema.Properties.Get(param.Name); ok {
+							errors = append(errors, fmt.Errorf("parameter %s already exists in schema", param.Name))
+							continue
+						}
+						schema.Properties.Set(param.Name, param.Schema)
+						schemaProxyParam := schema.Properties.Value(param.Name)
+						schemaParam, err := schemaProxyParam.BuildSchema()
+						if err != nil {
+							return fmt.Errorf("building schema for %s: %w", verb.Path, err), errors
+						}
+						schemaParam.Description = fmt.Sprintf("PARAMETER: %s, VERB: %s - %s", param.In, text.CapitaliseFirstLetter(op.Key()), param.Description)
+					}
+				}
 			}
 			byteSchema, err := generation.GenerateJsonSchemaFromSchemaProxy(base.CreateSchemaProxy(schema))
 			if err != nil {
-				return err
+				return err, errors
 			}
 			specByteSchema[resource.Kind] = byteSchema
 		}
@@ -90,12 +129,12 @@ func GenerateByteSchemas(doc *libopenapi.DocumentModel[v3.Document], resource de
 
 	statusSchema, err := schemaProxy.BuildSchema()
 	if err != nil {
-		return fmt.Errorf("building status schema for %s: %w", identifier, err)
+		return fmt.Errorf("building status schema for %s: %w", identifier, err), errors
 	}
 
 	statusByteSchema, err = generation.GenerateJsonSchemaFromSchemaProxy(base.CreateSchemaProxy(statusSchema))
 	if err != nil {
-		return err
+		return err, errors
 	}
 
 	g = &OASSchemaGenerator{
@@ -104,172 +143,51 @@ func GenerateByteSchemas(doc *libopenapi.DocumentModel[v3.Document], resource de
 		secByteSchema:    secByteSchema,
 	}
 
-	return nil
+	return nil, errors
 }
 
-func OASSpecJsonSchemaGetter(doc *libopenapi.DocumentModel[v3.Document], resource definitionv1alpha1.Resource) crdgen.JsonSchemaGetter {
-	return &oasSpecJsonSchemaGetter{
-		doc:      doc,
-		resource: resource,
-	}
+func OASSpecJsonSchemaGetter() crdgen.JsonSchemaGetter {
+	return &oasSpecJsonSchemaGetter{}
 }
 
 var _ crdgen.JsonSchemaGetter = (*oasSpecJsonSchemaGetter)(nil)
 
 type oasSpecJsonSchemaGetter struct {
-	doc      *libopenapi.DocumentModel[v3.Document]
-	resource definitionv1alpha1.Resource
 }
 
-// func (g *oasSpecJsonSchemaGetter) Get() ([]byte, error) {
-// 	byteSchema := make(map[string][]byte)
-// 	for _, verb := range g.resource.VerbsDescription {
-// 		if strings.EqualFold(verb.Action, "create") && strings.EqualFold(verb.Method, "post") {
-// 			path := g.doc.Model.Paths.PathItems.Value(verb.Path)
-// 			if path == nil {
-// 				return nil, fmt.Errorf("path %s not found", verb.Path)
-// 			}
-// 			bodySchema := base.CreateSchemaProxy(&base.Schema{Properties: orderedmap.New[string, *base.SchemaProxy]()})
-// 			if path.Post.RequestBody != nil {
-// 				bodySchema = path.Post.RequestBody.Content.Value("application/json").Schema //path.Post.RequestBody.Value.Content.Get("application/json").Schema
-// 			}
-// 			if bodySchema == nil {
-// 				return nil, fmt.Errorf("body schema not found for %s", verb.Path)
-// 			}
-// 			schema, err := bodySchema.BuildSchema()
-// 			if err != nil {
-// 				return nil, fmt.Errorf("building schema for %s: %w", verb.Path, err)
-// 			}
-// 			for _, param := range path.Post.Parameters {
-// 				schema.Properties.Set(param.Name, param.Schema)
-// 			}
-// 			byteSchema[g.resource.Kind], err = generation.GenerateJsonSchemaFromSchemaProxy(base.CreateSchemaProxy(schema))
-// 			if err != nil {
-// 				return nil, err
-// 			}
-// 		}
-// 	}
-// 	return byteSchema[g.resource.Kind], nil
-// }
-
 func (a *oasSpecJsonSchemaGetter) Get() ([]byte, error) {
+	// fmt.Println("specByteSchema", string(g.specByteSchema))
 	return g.specByteSchema, nil
 }
 
-// func OASStatusJsonSchemaGetter(doc *libopenapi.DocumentModel[v3.Document], resource definitionv1alpha1.Resource) crdgen.JsonSchemaGetter {
-// 	return &oasStatusJsonSchemaGetter{
-// 		doc:      doc,
-// 		resource: resource,
-// 	}
-// }
-
-// var _ crdgen.JsonSchemaGetter = (*oasStatusJsonSchemaGetter)(nil)
-
-// type oasStatusJsonSchemaGetter struct {
-// 	doc      *libopenapi.DocumentModel[v3.Document]
-// 	resource definitionv1alpha1.Resource
-// }
-
-// func (g *oasStatusJsonSchemaGetter) Get() ([]byte, error) {
-// 	var responseByteSchema []byte
-
-// 	for _, verb := range g.resource.VerbsDescription {
-// 		if strings.EqualFold(verb.Action, "create") && strings.EqualFold(verb.Method, "post") {
-// 			path := g.doc.Model.Paths.PathItems.Value(verb.Path)
-// 			if path == nil {
-// 				return nil, fmt.Errorf("path %s not found", verb.Path)
-// 			}
-// 			// Now, we need to get the response schema for the status
-// 			responseSchemaProxy := base.CreateSchemaProxy(&base.Schema{Properties: orderedmap.New[string, *base.SchemaProxy]()})
-// 			if path.Post.Responses.FindResponseByCode(200) != nil {
-// 				responseSchemaProxy = path.Post.Responses.FindResponseByCode(200).Content.Value("application/json").Schema
-// 			}
-// 			if responseSchemaProxy == nil {
-// 				return nil, fmt.Errorf("response schema proxy not found for %s", verb.Path)
-// 			}
-// 			responseSchema, err := responseSchemaProxy.BuildSchema()
-// 			if err != nil {
-// 				return nil, fmt.Errorf("building response schema for %s: %w", verb.Path, err)
-// 			}
-
-// 			responseByteSchema, err = generation.GenerateJsonSchemaFromSchemaProxy(base.CreateSchemaProxy(responseSchema))
-// 			if err != nil {
-// 				return nil, err
-// 			}
-// 		}
-// 	}
-
-// 	return responseByteSchema, nil
-// }
-
-func OASStatusJsonSchemaGetter(doc *libopenapi.DocumentModel[v3.Document], identifier string) crdgen.JsonSchemaGetter {
-	return &oasStatusJsonSchemaGetter{
-		doc:        doc,
-		identifier: identifier,
-	}
+func OASStatusJsonSchemaGetter() crdgen.JsonSchemaGetter {
+	return &oasStatusJsonSchemaGetter{}
 }
 
 var _ crdgen.JsonSchemaGetter = (*oasStatusJsonSchemaGetter)(nil)
 
 type oasStatusJsonSchemaGetter struct {
-	doc        *libopenapi.DocumentModel[v3.Document]
-	identifier string
 }
-
-// func (g *oasStatusJsonSchemaGetter) Get() ([]byte, error) {
-// 	var responseByteSchema []byte
-
-// 	// Create an ordered property map
-// 	propMap := orderedmap.New[string, *base.SchemaProxy]()
-
-// 	// Add a field named "exampleField" of type string
-// 	propMap.Set(g.identifier, base.CreateSchemaProxy(&base.Schema{
-// 		Type: []string{"string"},
-// 	}))
-
-// 	// Create a schema proxy with the properties map
-// 	schemaProxy := base.CreateSchemaProxy(&base.Schema{
-// 		Type:       []string{"object"},
-// 		Properties: propMap,
-// 	})
-
-// 	responseSchema, err := schemaProxy.BuildSchema()
-// 	if err != nil {
-// 		return nil, fmt.Errorf("building response schema for %s: %w", g.identifier, err)
-// 	}
-
-// 	responseByteSchema, err = generation.GenerateJsonSchemaFromSchemaProxy(base.CreateSchemaProxy(responseSchema))
-// 	if err != nil {
-// 		return nil, err
-// 	}
-
-// 	return responseByteSchema, nil
-// }
 
 func (a *oasStatusJsonSchemaGetter) Get() ([]byte, error) {
 	return g.statusByteSchema, nil
 }
 
-func OASAuthJsonSchemaGetter(secSchema *v3.SecurityScheme, resource definitionv1alpha1.Resource) crdgen.JsonSchemaGetter {
+func OASAuthJsonSchemaGetter(secSchemaName string) crdgen.JsonSchemaGetter {
 	return &oasAuthJsonSchemaGetter{
-		secSchema: secSchema,
-		resource:  resource,
+		secSchemaName: secSchemaName,
 	}
 }
 
 var _ crdgen.JsonSchemaGetter = (*oasAuthJsonSchemaGetter)(nil)
 
 type oasAuthJsonSchemaGetter struct {
-	secSchema *v3.SecurityScheme
-	resource  definitionv1alpha1.Resource
+	secSchemaName string
 }
 
-func (g *oasAuthJsonSchemaGetter) Get() ([]byte, error) {
-	byteSchema, err := generation.GenerateAuthSchemaFromSecuritySchema(g.secSchema)
-	if err != nil {
-		return nil, nil
-	}
-	return byteSchema, nil
+func (a *oasAuthJsonSchemaGetter) Get() ([]byte, error) {
+
+	return g.secByteSchema[a.secSchemaName], nil
 }
 
 var _ crdgen.JsonSchemaGetter = (*staticJsonSchemaGetter)(nil)
